* WPML translation not working for strings defined via variable - FIXED
* Custom field date shows un-translated date - FIXED
* Option added to set post images widget title - ADDED
* Option added in map widget/shortcode to tick/untick categories on the map - ADDED
* Exclude GD template pages from Yoast XML page sitemap - ADDED
* Rank Math SEO not detecting GD fields - FIXED

= 2.0.0.67 =
* Fail to save feature image for new listing when post revision is enabled - FIXED
* Post link not working in email sent to admin on post edit - FIXED
* Post badge does not supports category and tags - FIXED
* Option added in gd_categories widget/shortcode to CPT title - ADDED
* Rank Math SEO option overwrites Yoast SEO option - FIXED
* Filter GD Categories widget get terms args - ADDED
* Rank Math plugin sitemap image count wrong for GD listings - FIXED
* Post Images widget now has `fallback_types` that can be set - ADDED
* Post Images widget can now generate screenshots of url fields by appending `_screenshot` eg: website_screenshot - ADDED
* Delete subsite removes data from main site on multisite network - FIXED
* CPT type post class not set to ajax listings - FIXED
* Custom field accepts script tags - FIXED
* Business hours option added to show next day closing - FIXED
* Network subsite shows countries table does not exist error - FIXED
* Added a new pre-defined field "Distance To" - ADDED
* Enfold theme builder color section not working on GD template - FIXED
* Custom field option values always shows option uppercase first - FIXED

= 2.0.0.66 =
* GD post favourites widget issue for icon option - FIXED
* Timezone API requests exposes the API key - FIXED
* Setup wizard moved to later hook so is_block_editor() method can be used - FIXED
* Category map icon no longer required when adding a category - CHANGED
* Category map icon will be auto-generated if empty and Font Awesome icon is set - ADDED
* Default map marker updated to new icon - CHANGED